// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventSection render 1`] = `
<div>
  <div
    class="event-section-root d-flex align-items-center"
  >
    <div
      class="section-header"
    >
      Analyze
    </div>
    <div
      class="event-container d-flex justify-content-between"
    >
      <div
        class="event-list"
      />
      <div
        class="dropdown"
      >
        <button
          aria-expanded="false"
          aria-haspopup="true"
          aria-label="Add"
          class="dropdown-toggle button-root add-event-button btn btn-sm btn-primary"
          type="button"
        >
          <svg
            class="lexicon-icon lexicon-icon-plus icon-root"
            role="presentation"
          >
            <use
              href="#plus"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`EventSection render with event 1`] = `
<div>
  <div
    class="event-section-root d-flex align-items-center"
  >
    <div
      class="section-header"
    >
      Analyze
    </div>
    <div
      class="event-container d-flex justify-content-between"
    >
      <div
        class="event-list"
      >
        <div
          class="dropdown"
        >
          <div
            class="chip-root d-flex align-items-center justify-content-between event-chip-root"
          >
            <button
              class="button-root event-name btn btn-unstyled"
              type="button"
            >
              View Article
            </button>
            <button
              aria-label="Close"
              class="button-root remove-button btn btn-unstyled"
              type="button"
            >
              <svg
                class="lexicon-icon lexicon-icon-times-circle icon-root"
                role="presentation"
              >
                <use
                  href="#times-circle"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
